img loading error handling

--- a/kv/LMS.kv
+++ b/kv/LMS.kv
@@ -232,7 +232,7 @@ ScreenManager:
                 orientation: 'vertical'
 
                 Image:
-                    source: 'assets\\lib_img2.jpg'
+                    source: 'assets/lib_img2.jpg'
                     allow_stretch: True
                     keep_ratio: False
 
@@ -598,7 +598,7 @@ ScreenManager:
 
 <LoginScreen>:
     Image:
-        source: "assets\\bg_img.jpg" # Path to your gradient
+        source: "assets/bg_img.jpg" # Path to your gradient
         size: self.size
         allow_stretch: True
         keep_ratio: False
@@ -638,7 +638,6 @@ ScreenManager:
 
         MDTextField:
             id: username
-            text: "12410042"
             hint_text: "Enter PRN"
             font_name: "MPoppins"
             helper_text: "PRN of 8 digits starting with 1 2 ......only*"
@@ -656,7 +655,6 @@ ScreenManager:
 
             MDTextField:
                 id : password
-                text: "India"
                 font_name: "MPoppins"
                 font_size: "14sp"
                 hint_text: "Enter Password"
